# job-board

./: .gitignore  Makefile  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
src/job_board/: bookmark_reader.py  dashboard.py  job_db.py  job_embeddings.py  job_parser.py
